@@ -760,16 +760,16 @@ For window: set current child to window or its parent according to window-parent
 	       (reorder ()
 		 (let ((elem (nth (mod (incf hit direction) (length orig)) orig)))
 		   (funcall set-fun (nconc (list elem) (remove elem orig)))))
-	       (handle-key-press (&rest event-slots &key root code state &allow-other-keys)
+	       (handle-key-press (&rest event-slots &key code state &allow-other-keys)
 		 (declare (ignore event-slots))
-		 (dbg 'press root code state)
-		 (dbg (first reverse-modifiers) (state->modifiers state))
+		 ;;(dbg 'press root code state)
+		 ;;(dbg (first reverse-modifiers) (state->modifiers state))
 		 (if (is-reverse-modifier code state)
 		     (setf direction -1)
 		     (reorder)))
-	       (handle-key-release (&rest event-slots &key root code state &allow-other-keys)
+	       (handle-key-release (&rest event-slots &key code state &allow-other-keys)
 		 (declare (ignore event-slots))
-		 (dbg 'release root code state)
+		 ;;(dbg 'release root code state)
 		 (when (is-reverse-modifier code state)
 		   (setf direction 1))
 		 (when (member code modifier)
@@ -789,8 +789,7 @@ For window: set current child to window or its parent according to window-parent
 		 (xlib:display-finish-output *display*)
 	       (xlib:process-event *display* :handler #'handle-select-next-child-event)))
 	(xungrab-keyboard)
-	(grab-main-keys)
-	(print 'fin-du-tab)))))
+	(grab-main-keys)))))
 
 (defun set-select-next-child (new)
   (setf (frame-child *current-child*) new)
